--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,14 +1,15 @@
-
-<h1>Login</h1>
-<form (ngSubmit)="onLogin()">
-    <div>
-        <label for="Username">Username:</label>
-        <input type="text" id="username" name="Username" required [(ngModel)]="username">
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required  [(ngModel)]="password">
-    </div>
-    <button type="submit">Login</button>
-</form>
-<p>Non sei registrato? <a href="/register">Registrati qui</a></p>
+<div class="login-container">
+    <h1>Login</h1>
+    <form class="login-form" (ngSubmit)="onLogin()">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required [(ngModel)]="username">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required  [(ngModel)]="password">
+        </div>
+        <button type="submit" class="btn-login">Login</button>
+    </form>
+    <p class="register-link">Non sei registrato? <a href="/register">Registrati qui</a></p>
+</div>
