--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -3,6 +3,7 @@
         <h1>storj</h1>
     </div>
     <div class="login">
-        <a href="/login">Login</a>
+        
+        <button mat-button routerLink="/login">Login</button>
     </div>
 </nav>
