--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,12 +1,14 @@
-<h1>Form registrazione</h1>
-<form (ngSubmit)="onSubmit()">
-    <div>
-        <label for="Username">Username:</label>
-        <input type="text" id="username" name="Username" required [(ngModel)]="username">
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required  [(ngModel)]="password">
-    </div>
-    <button type="submit">Registrati</button>
-</form>
+<div class="registration-container">
+    <h1>Form registrazione</h1>
+    <form class="registration-form" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required [(ngModel)]="username">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required  [(ngModel)]="password">
+        </div>
+        <button type="submit" class="btn-register">Registrati</button>
+    </form>
+</div>
