Miglioramento della parte grafica,aggiunta la pagina per effettuare il pagamento

--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.html
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.html
@@ -1,3 +1,4 @@
 <div class="messaggio">
     <h1>Benvenuto su storJ</h1>
+    <button mat-button routerLink="/payment">Pagina pagamento</button>
 </div>
