aggiunte le guardie,il meccanismo di pesistenza dei dati,creato un servizio per il passaggio di dati e creato il bottone per effettuare il logout

--- a/frontend/src/app/components/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/payment-page/payment-page.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="payment-container">
     <h1>Form per il pagamento</h1>
     <form class="payment-form" (ngSubmit)="onSubmit()">
