--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.html
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.html
@@ -1,4 +1,5 @@
+<app-navbar></app-navbar>
 <div class="messaggio">
-    <h1>Benvenuto su storJ</h1>
+    <h1>Pagina Iniziale di Storj</h1>
     <button mat-button routerLink="/payment">Pagina pagamento</button>
 </div>
