--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.html
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="messaggio">
-    <h1>Pagina Iniziale di Storj</h1>
-    <button mat-button routerLink="/payment">Pagina pagamento</button>
+    <h1>Benvenuto su storJ</h1>
+    <button mat-button routerLink="/createStory">Crea</button>
+    <button mat-button routerLink="/handlerPlaypage">Gioca</button>
 </div>
