--- a/frontend/src/app/components/create-story/create-story.component.html
+++ b/frontend/src/app/components/create-story/create-story.component.html
@@ -1,1 +1,18 @@
-<p>create-story works!</p>
+<div class="story-container">
+    <h1>Inserisci le informazioni della storia</h1>
+    <form class="story-form" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+            <label for="id_creatore">ID Creatore:</label>
+            <input type="number" id="id_creatore" name="id_creatore" required [(ngModel)]="idCreatore">
+        </div>
+        <div class="form-group">
+            <label for="titolo">Titolo:</label>
+            <input type="text" id="titolo" name="titolo" required [(ngModel)]="titolo">
+        </div>
+        <div class="form-group">
+            <label for="categoria">Categoria:</label>
+            <input type="text" id="categoria" name="categoria" required [(ngModel)]="categoria">
+        </div>
+        <button type="submit" class="btn-creazione">Crea</button>
+    </form>
+</div>
