--- a/frontend/src/app/components/handler-playpage/handler-playpage.component.css
+++ b/frontend/src/app/components/handler-playpage/handler-playpage.component.css
@@ -1,10 +1,10 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px; /* Mantiene lo spazio tra i box */
-    justify-content: center; /* Centra i box se non occupano l'intera larghezza */
-    margin-top: 30px; /* Aggiunge spazio tra la navbar e i contenuti */
-    padding: 0 20px; /* Aggiunge un po' di spazio ai lati del contenitore */
+    gap: 20px; 
+    justify-content: center;
+    margin-top: 30px; 
+    padding: 0 20px; 
 }
 
 .story-box {
@@ -14,15 +14,31 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: calc(50% - 20px); /* Calcola la larghezza per 2 box per riga */
+    width: calc(50% - 20px); 
     box-sizing: border-box;
 }
 
 .info {
-    display: block; /* Ogni informazione occupa una riga intera */
+    display: block; 
 }
 
 .play-button {
     margin-top: auto; 
     text-align: right; 
 }
+
+.no-stories-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; /* Centra il testo all'interno del div */
+    height: 50vh; /* Occupa metà dello spazio verticale disponibile */
+    font-size: 4vw; /* Adatta la dimensione del testo alla larghezza della viewport */
+  }
+  
+  /* Stili aggiuntivi per garantire che il messaggio sia visibile e leggibile */
+  .no-stories-message {
+    padding: 20px;
+    border: 2px solid #000;
+    border-radius: 10px;
+  }
