--- a/frontend/src/app/components/handler-playpage/handler-playpage.component.html
+++ b/frontend/src/app/components/handler-playpage/handler-playpage.component.html
@@ -1,16 +1,23 @@
 <app-navbar></app-navbar>
-<body>
-    <div class="container">
-        <div *ngFor="let item of stories" class="story-box">
-            <div class="info">
-                <div><label>{{ item.id }}</label></div>
-                <div><label>{{ item.id_creatore }}</label></div>
-                <div><label>{{ item.id_scenario_iniziale }}</label></div>
-                <div><label>{{ item.categoria }}</label></div>
-                <div><label>{{ item.numero_scenari }}</label></div>
-                <div><label>{{ item.statoCompletamento }}</label></div>
-            </div>
-            <div class="play-button"><button>Gioca Storia</button></div>
+<div class="filters">
+    <input type="text" placeholder="Autore" [(ngModel)]="filterAuthor">
+    <input type="text" placeholder="Categoria" [(ngModel)]="filterCategory">
+    <button (click)="filterStories(filterAuthor, filterCategory)">Filtra</button>
+</div>
+<div *ngIf="noStoriesFound" class="no-stories-container">
+    <div class="no-stories-message">Nessuna storia trovata</div>
+</div>
+
+<div class="container">
+    <div *ngFor="let item of stories" class="story-box">
+        <div class="info">
+            <div><label>Titolo: {{ item.titolo }}</label></div>
+            <div><label>ID: {{ item.id }}</label></div>
+            <div><label>ID_Creatore: {{ item.id_creatore }}</label></div>
+            <div><label>Categoria: {{ item.categoria }}</label></div>
+            <div><label>Numero Scenari: {{ item.numero_scenari }}</label></div>
+            <div><label>Stato Completamento: {{ item.statoCompletamento ? 'Completato' : 'da giocare' }}</label></div>
         </div>
+        <div class="play-button"><button (click)="playStory(item)">Gioca Storia</button></div>
     </div>
-</body>
+</div>
