modifiche ai bottoni del componente navbar

--- a/frontend/src/app/components/create-story/create-story.component.html
+++ b/frontend/src/app/components/create-story/create-story.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="story-container">
     <h1>Inserisci le informazioni della storia</h1>
     <form class="story-form" (ngSubmit)="onSubmit()">
