--- a/frontend/src/app/components/create-story/create-story.component.html
+++ b/frontend/src/app/components/create-story/create-story.component.html
@@ -1,19 +1,12 @@
 <app-navbar></app-navbar>
-<div class="story-container">
-    <h1>Inserisci le informazioni della storia</h1>
-    <form class="story-form" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <label for="id_creatore">ID Creatore:</label>
-            <input type="number" id="id_creatore" name="id_creatore" required [(ngModel)]="idCreatore">
+<div class="container">
+    <div *ngFor="let item of scenarios" class="scenario-box">
+        <div class="info">
+            <div><label>Testo: {{ item.testo }}</label></div>
+            <div><label>Tipo_risposta: {{ item.tipo_risposta }}</label></div>
+            <div><label>Tipo_scenario: {{ item.tipo_scenario }}</label></div>
         </div>
-        <div class="form-group">
-            <label for="titolo">Titolo:</label>
-            <input type="text" id="titolo" name="titolo" required [(ngModel)]="titolo">
-        </div>
-        <div class="form-group">
-            <label for="categoria">Categoria:</label>
-            <input type="text" id="categoria" name="categoria" required [(ngModel)]="categoria">
-        </div>
-        <button type="submit" class="btn-creazione">Crea</button>
-    </form>
+        <div class="remove-button"><button (click)="removeScenario(item.id)">Rimuovi</button></div>
+        <div class="remove-button"><button (click)="redirectToScenarioType(item,item.tipo_risposta)">scelte</button></div>
+    </div>
 </div>
