--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -3,26 +3,38 @@
         <h1>storj</h1>
     </div>
     <div class="login">
-         <!-- Mostra questi pulsanti solo se l'utente NON è autenticato -->
-         <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">Sign In</button>
-         <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">Sign Up</button>
+        <!-- Mostra questi pulsanti solo se l'utente NON è autenticato -->
+        <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">Sign In</button>
+        <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">Sign Up</button>
 
-         <!-- Mostra il bottone "Paga" solo se showPaymentButton è true -->
-         <button mat-button routerLink="/payment" *ngIf="showPaymentButton">Paga</button>
+        <!-- Mostra il bottone "Paga" solo se showPaymentButton è true -->
+        <button mat-button routerLink="/payment" *ngIf="showPaymentButton">Paga</button>
 
-         <!-- Mostra questo pulsante solo se l'utente è autenticato e ha effettuato il pagamento  -->
-         <button mat-button routerLink="/handlerPlaypage" *ngIf="isAuthenticated() && !showPaymentButton">Gioca</button>
+        <!-- Mostra il bottone "Crea Scenario" solo se l'utente è su "/createStory"-->
+        <button mat-button routerLink="/formScenario" *ngIf="currentUrl === '/createStory' && isAuthenticated()">Crea Scenario</button>
+        <button mat-button routerLink="/storyObjects" *ngIf="currentUrl === '/createStory' && isAuthenticated()">Oggetti</button>
 
-         <!-- Mostra questi pulsanti solo se l'utente è autenticato -->
-         <button mat-button routerLink="/homeStories" *ngIf="isAuthenticated()">Crea</button>
-         <button mat-button (click)="logout()" *ngIf="isAuthenticated()">Logout</button>
-         
+        <!-- Mostra il bottone "Crea oggetto" solo se l'utente è su "/storyObjects"-->
+        <button mat-button routerLink="/formStoryObject" *ngIf="currentUrl === '/storyObjects' && isAuthenticated()">Crea Oggeto</button>
+        
+        <!-- Mostra questo pulsante solo se l'utente è autenticato e ha effettuato il pagamento  -->
+        <button mat-button routerLink="/handlerPlaypage" *ngIf="currentUrl === '/storJPage' &&  isAuthenticated() && !showPaymentButton">Gioca</button>
+
+
+        <button mat-button routerLink="/homeStories" *ngIf="currentUrl === '/storJPage' && isAuthenticated()">Crea</button>
+        <button mat-button (click)="logout()" *ngIf="isAuthenticated()">Logout</button>
+
+
+        <!-- Mostra questo pulsante solo se l'utente si trova in homestories-->
+        <button mat-button routerLink="/formStory" *ngIf="currentUrl === '/homeStories' && isAuthenticated()">Crea storia</button>
+
+        <!-- Mostra questo pulsante solo se l'utente si trova in multipleChoices-->
+        <button mat-button routerLink="/formMultipleChoice" *ngIf="currentUrl === '/multiplechoice' && isAuthenticated()">Crea scelta</button>
+
+          <!-- Mostra questo pulsante solo se l'utente si trova in singleChoice-->
+          <button mat-button routerLink="/formSingleChoice" *ngIf="currentUrl === '/singlechoice' && isAuthenticated()">Crea scelta</button>
 
         
 
-         <!-- Mostra il bottone "Crea Scenario" solo se l'utente è su "/createStory" (TEST FUNZIONANTE)-->
-         <button mat-button routerLink="/createScenario" *ngIf="currentUrl === '/createStory' && isAuthenticated()">Crea Scenario</button>
-
-         
     </div>
 </nav>
