--- a/frontend/src/app/components/single-choice/single-choice.component.css
+++ b/frontend/src/app/components/single-choice/single-choice.component.css
@@ -7,7 +7,7 @@
     padding: 0 20px; 
 }
 
-.scenario-box {
+.singleChoice-box {
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 10px;
