--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.html
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
 <div class="messaggio">
     <h1>Benvenuto su storJ</h1>
+    <p>Per poter giocare ad una storia clicca il bottone <span class="hidden-visible">Gioca<div><span class="visible-hidden">Devi aver prima effettuato un pagamento</span></div></span></p>
+    <p>Per poter creare una storia clicca il bottone <span>Crea<span></span></span></p>
 </div>
