--- a/frontend/src/app/components/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/payment-page/payment-page.component.html
@@ -4,15 +4,15 @@
     <form class="payment-form" (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label for="amount">Amount:</label>
-            <input type="amount" id="amount" name="amount" required [(ngModel)]="amount">
+            <input type="amount" id="amount" name="amount" [(ngModel)]="amount">
         </div>
         <div class="form-group">
             <label for="cardHolder">Card Holder:</label>
-            <input type="cardHolder" id="cardHolder" name="cardHolder" required  [(ngModel)]="cardHolder">
+            <input type="cardHolder" id="cardHolder" name="cardHolder"[(ngModel)]="cardHolder">
         </div>
         <div class="form-group">
             <label for="cardNumber">Card Number:</label>
-            <input type="cardNumber" id="cardNumber" name="cardNumber" required  [(ngModel)]="cardNumber">
+            <input type="cardNumber" id="cardNumber" name="cardNumber" [(ngModel)]="cardNumber">
         </div>
         <div class="form-group">
             <label for="cvv">cvv:</label>
