--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,13 @@
+button {
+  transition: .5s;
+}
+
+button:hover {
+  color: white;
+  background-color: transparent;
+  border: 0.5px solid white;
+}
+
 .navbar {
   background-color: #3661d8c3; /* Colore di sfondo della navbar */
   color: #fff; /* Colore del testo */
