--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -17,16 +17,16 @@
         <button mat-button routerLink="/payment" *ngIf="showPaymentButton">Paga</button>
 
         <!-- Mostra il bottone "Crea Scenario" solo se l'utente è su "/createStory"-->
-        <button mat-button *ngIf="currentUrl === '/createStory' && isAuthenticated()" (click)="saveStory()">Salva
+        <button mat-button *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode" (click)="saveStory()">Salva
             Storia</button>
-        <button mat-button routerLink="/formScenario" *ngIf="currentUrl === '/createStory' && isAuthenticated()">Crea
+        <button mat-button routerLink="/formScenario" *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode">Crea
             Scenario</button>
         <button mat-button routerLink="/storyObjects"
             *ngIf="currentUrl === '/createStory' && isAuthenticated()">Oggetti</button>
 
         <!-- Mostra il bottone "Crea oggetto" solo se l'utente è su "/storyObjects"-->
         <button mat-button routerLink="/formStoryObject"
-            *ngIf="currentUrl === '/storyObjects' && isAuthenticated()">Crea Oggeto</button>
+            *ngIf="currentUrl === '/storyObjects' && isAuthenticated() && !isInTextEditMode">Crea Oggeto</button>
 
         <!-- Mostra questo pulsante solo se l'utente è autenticato e ha effettuato il pagamento  -->
         <button mat-button routerLink="/handlerPlaypage"
@@ -40,11 +40,11 @@
 
         <!-- Mostra questo pulsante solo se l'utente si trova in formMultipleChoices-->
         <button mat-button routerLink="/formMultipleChoice"
-            *ngIf="currentUrl === '/multiplechoice' && isAuthenticated()">Crea scelta</button>
+            *ngIf="currentUrl === '/multiplechoice' && isAuthenticated() && !isInTextEditMode">Crea scelta</button>
 
         <!-- Mostra questo pulsante solo se l'utente si trova in formSingleChoice-->
         <button mat-button routerLink="/formSingleChoice"
-            *ngIf="currentUrl === '/singlechoice' && isAuthenticated() && !getIsSingleChoiceCreated()">Crea scelta</button>
+            *ngIf="currentUrl === '/singlechoice' && isAuthenticated() && !getIsSingleChoiceCreated() && !isInTextEditMode">Crea scelta</button>
             
         <button mat-button (click)="logout()" *ngIf="isAuthenticated()">Logout</button>
     </div>
