--- a/frontend/src/app/components/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/payment-page/payment-page.component.html
@@ -4,19 +4,19 @@
     <form class="payment-form" (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label for="amount">Amount:</label>
-            <input type="amount" id="amount" name="amount" [(ngModel)]="amount">
+            <input type="amount" id="amount" name="amount" required [(ngModel)]="amount" >
         </div>
         <div class="form-group">
             <label for="cardHolder">Card Holder:</label>
-            <input type="cardHolder" id="cardHolder" name="cardHolder"[(ngModel)]="cardHolder">
+            <input type="cardHolder" id="cardHolder" name="cardHolder" required [(ngModel)]="cardHolder"required>
         </div>
         <div class="form-group">
             <label for="cardNumber">Card Number:</label>
-            <input type="cardNumber" id="cardNumber" name="cardNumber" [(ngModel)]="cardNumber">
+            <input type="cardNumber" id="cardNumber" name="cardNumber" required [(ngModel)]="cardNumber">
         </div>
         <div class="form-group">
             <label for="cvv">cvv:</label>
-            <input type="cvv" id="cvv" name="cvv" required  [(ngModel)]="cvv">
+            <input type="cvv" id="cvv" name="cvv" required [(ngModel)]="cvv">
         </div>
         <button type="submit" class="btn-payment">Paga</button>
     </form>
