aggiunta modifica campi testuali

--- a/frontend/src/app/components/form-scenario/form-scenario.component.html
+++ b/frontend/src/app/components/form-scenario/form-scenario.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="scenario-container">
+<div class="scenario-container" *ngIf="!isInTextEditMode">
     <h1>Inserisci le informazioni dello scenario</h1>
     <form class="scenario-form" (ngSubmit)="onSubmit()">
         <div class="form-group">
@@ -29,5 +29,27 @@
             </select>
         </div>
         <button type="submit" class="btn-creazione">Crea Scenario</button>
+    </form>
+</div>
+
+
+<!--se mi trovo nella modalità di modifica testo scenario-->
+<div class="scenario-container" *ngIf="isInTextEditMode">
+    <h1>Modifica il testo dello scenario</h1>
+    <form class="scenario-form" (ngSubmit)="updateScenarioText()">
+        <div class="form-group">
+            <label for="testo">Testo dello Scenario:</label>
+            <textarea *ngIf="currentScenario" id="testo" name="testo" required [ngModel]="currentScenario.testo"
+                (ngModelChange)="onScenarioTextChange($event)"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="tipoRisposta">Tipo di Risposta:</label>
+            <input type="text" [value]="currentScenario?.tipo_risposta" readonly>
+        </div>
+        <div class="form-group">
+            <label for="tipoScenario">Tipo di Scenario:</label>
+            <input type="text" [value]="currentScenario?.tipo_scenario" readonly>
+        </div>
+        <button type="submit" class="btn-creazione" [disabled]="isUpdated()">Aggiorna Scenario</button>
     </form>
 </div>
