--- a/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.css
+++ b/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.css
@@ -25,7 +25,7 @@ label {
 }
 
 input[type="text"],
-input[type="number"] { 
+input[type="number"] {
     width: 100%;
     padding: 8px;
     font-size: 16px;
@@ -34,7 +34,7 @@ input[type="number"] {
     box-sizing: border-box;
 }
 
-button.btn-creazione { 
+button.btn-creazione {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
@@ -45,7 +45,14 @@ button.btn-creazione {
     transition: background-color 0.3s ease;
 }
 
-button.btn-creazione:hover { 
+.btn-creazione:disabled {
+    color: #cccccc;
+    background-color: #aaaaaa;
+    border: 1px solid #999999;
+    cursor: not-allowed;
+}
+
+button.btn-creazione:hover {
     background-color: #0056b3;
 }
 
