--- a/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
+++ b/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="multiple-choice-container">
+<div class="multiple-choice-container" *ngIf="!isInTextEditMode">
     <h1>Inserisci le informazioni della scelta multipla</h1>
     <form class="multiple-choice-form" (ngSubmit)="onSubmit()">
         <div class="form-group">
@@ -21,5 +21,22 @@
         </div>
        
         <button type="submit" class="btn-creazione">Crea Scelta Multipla</button>
+    </form>
+</div>
+
+<!--se mi trovo nella modalità di modifica testo scenario-->
+<div class="multiple-choice-container" *ngIf="isInTextEditMode">
+    <h1>Aggiorna le informazioni della scelta multipla</h1>
+    <form class="multiple-choice-form" (ngSubmit)="updateMultipleChoicheText()">
+        <div class="form-group">
+            <label for="testo">Testo della Domanda:</label>
+            <textarea *ngIf="currentMultipleChoiche" id="testo" name="testo" required [ngModel]="currentMultipleChoiche.testo" (ngModelChange)="onTextChange($event)"></textarea>  
+        </div>
+        <div class="form-group">
+            <label for="idScenarioSuccessivo">ID Scenario Successivo:</label>
+            <input type="text" [value]="currentMultipleChoiche?.id_scenario_successivo" readonly>
+        </div>
+       
+        <button type="submit" class="btn-creazione" [disabled]="isUpdated()">Aggiorna Scelta Multipla</button>
     </form>
 </div>
