--- a/frontend/src/app/components/form-scenario/form-scenario.component.css
+++ b/frontend/src/app/components/form-scenario/form-scenario.component.css
@@ -24,7 +24,7 @@ label {
     font-weight: bold;
 }
 
-input[type="text"]{ 
+input[type="text"] {
     width: 100%;
     padding: 8px;
     font-size: 16px;
@@ -33,7 +33,7 @@ input[type="text"]{
     box-sizing: border-box;
 }
 
-button.btn-creazione { 
+button.btn-creazione {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
@@ -44,14 +44,20 @@ button.btn-creazione {
     transition: background-color 0.3s ease;
 }
 
-button.btn-creazione:hover { 
+.btn-creazione:disabled {
+    color: #cccccc;
+    background-color: #aaaaaa;
+    border: 1px solid #999999;
+    cursor: not-allowed;
+}
+
+button.btn-creazione:hover {
     background-color: #0056b3;
 }
 
 textarea {
-    width: 100%; 
-    height: 150px; 
-    box-sizing: border-box; 
-    resize: none; 
+    width: 100%;
+    height: 150px;
+    box-sizing: border-box;
+    resize: none;
 }
-
