aggiunta modifica campi testuali

--- a/frontend/src/app/components/create-story/create-story.component.css
+++ b/frontend/src/app/components/create-story/create-story.component.css
@@ -26,3 +26,8 @@
     margin-top: auto; 
     text-align: right; 
 }
+
+.editScenarioText-button {
+    margin-top: auto; 
+    text-align: right; 
+}
