--- a/frontend/src/app/components/handler-playpage/handler-playpage.component.html
+++ b/frontend/src/app/components/handler-playpage/handler-playpage.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+
+<!--Div per il filtro-->
 <div class="filters">
     <select [(ngModel)]="filterType">
         <option value="Autore">Autore</option>
@@ -12,10 +14,12 @@
     <div class="no-stories-message">Nessuna storia trovata</div>
 </div>
 
+<!--Div per il box delle storie salvate-->
 <div class="container">
     <div *ngFor="let item of stories" class="story-box">
         <div class="info">
             <div><label>Titolo: {{ item.titolo }}</label></div>
+            <div><label>Autore: {{ authorMap.get(item.id) }}</label></div>
             <div><label>Categoria: {{ item.categoria }}</label></div>
             <div><label>Numero Scenari: {{ item.numero_scenari }}</label></div>
         </div>
